@@ -87,9 +87,14 @@ testDependencies {
    api("us.ihmc:ihmc-commons-testing:0.35.1")
 }
 
-app.entrypoint("IHMCLogger", "us.ihmc.robotDataLogger.logger.YoVariableLoggerDispatcher")
-app.entrypoint("IHMCLoggerDebug5005", "us.ihmc.robotDataLogger.logger.YoVariableLoggerDispatcher", listOf
-("-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005",
+app.entrypoint("IHMCLogger", "us.ihmc.robotDataLogger.logger.YoVariableLoggerDispatcher", listOf(
+   "-XX:+UseZGC",
+   "-XX:+AlwaysPreTouch",
+   "-Xms1g",
+   "-Xmx1g",
+))
+app.entrypoint("IHMCLoggerDebug5005", "us.ihmc.robotDataLogger.logger.YoVariableLoggerDispatcher", listOf(
+   "-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005",
 ))
 app.entrypoint("BlackMagicCapture", "us.ihmc.javadecklink.Capture")
 
